kubernetes-manifests/authservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authservice-app
  namespace: default
  labels:
    k8s-app: authservice-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: authservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: authservice-app
          image: authservice
          ports:
            - name: grpc
              containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: default
spec:
  selector:
    k8s-app: authservice-app
  ports:
    - port: 3002
      targetPort: 3002
      name: grpc
