kubernetes-manifests/chatservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: chatservice-app
  namespace: default
  labels:
    k8s-app: chatservice-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: chatservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: chatservice-app
          image: chatservice
          ports:
            - containerPort: 3000
              name: grpc
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chatservice
  namespace: default
spec:
  selector:
    k8s-app: chatservice-app
  ports:
    - port: 3000
      targetPort: 3000
      name: grpc
