kubernetes-manifests/core.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: premierpredictor-deployment
spec:
  selector:
    matchLabels:
      app: premierpredictor-app
  template:
    metadata:
      labels:
        app: premierpredictor-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: premierpredictor-app
          image: premierpredictor
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: server
          readinessProbe:
            httpGet:
              path: /_health
              port: 8080
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /_health
              port: 8080
            initialDelaySeconds: 60
          resources:
            requests:
              cpu: 200m
              memory: 180Mi
            limits:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: premierpredictor-service
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: core_mapping
      prefix: /
      service: premierpredictor-service:8080
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: premierpredictor-app
  type: ClusterIP
