kubernetes-manifests/emailservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emailservice-app
  namespace: default
  labels:
    k8s-app: emailservice-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: emailservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: emailservice-app
          image: emailservice
          ports:
            - containerPort: 3011
              name: grpc
          readinessProbe:
            httpGet:
              path: /health
              port: 8091
          livenessProbe:
            httpGet:
              path: /health
              port: 8091
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: default
spec:
  selector:
    k8s-app: emailservice-app
  ports:
    - port: 3011
      targetPort: 3011
      name: grpc
