kubernetes-manifests/fixtueservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fixtureservice-app
  namespace: default
  labels:
    k8s-app: fixtureservice-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: fixtureservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: fixtureservice-app
          image: fixtureservice
          ports:
            - name: grpc
              containerPort: 3006
          readinessProbe:
            httpGet:
              path: /health
              port: 8086
          livenessProbe:
            httpGet:
              path: /health
              port: 8086
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: fixtureservice
  namespace: default
spec:
  selector:
    k8s-app: fixtureservice-app
  ports:
    - port: 3006
      targetPort: 3006
      name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: fixtureservice-service
spec:
  ports:
    - port: 8086
      targetPort: 8086
      name: http
  selector:
    app: fixtureservice-app
  type: NodePort
