kubernetes-manifests/kauthservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kauthservice-app
  namespace: default
  labels:
    k8s-app: kauthservice-app
spec:
  template:
    metadata:
      labels:
        k8s-app: kauthservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: kauthservice-app
          image: kauthservice
          ports:
            - name: grpc
              containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kauthservice
  namespace: default
spec:
  selector:
    k8s-app: kauthservice-app
  ports:
    - port: 3001
      targetPort: 3001
      name: grpc
