kubernetes-manifests/livematchservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: livematchservice-app
  namespace: default
  labels:
    k8s-app: livematchservice-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: livematchservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: livematchservice-app
          image: livematchservice
          ports:
            - containerPort: 3008
              name: grpc
          readinessProbe:
            httpGet:
              path: /health
              port: 8088
          livenessProbe:
            httpGet:
              path: /health
              port: 8088
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: livematchservice
  namespace: default
spec:
  selector:
    k8s-app: livematchservice-app
  ports:
    - port: 3008
      targetPort: 3008
      name: grpc
