kubernetes-manifests/predictionservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: predictionservice-app
  namespace: default
  labels:
    k8s-app: predictionservice-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: predictionservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: predictionservice-app
          image: predictionservice
          ports:
            - containerPort: 3007
              name: grpc
          readinessProbe:
            httpGet:
              path: /health
              port: 8087
          livenessProbe:
            httpGet:
              path: /health
              port: 8087
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: predictionservice
  namespace: default
spec:
  selector:
    k8s-app: predictionservice-app
  ports:
    - port: 3007
      targetPort: 3007
      name: grpc
