kubernetes-manifests/userservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: userservice-app
  namespace: default
  labels:
    k8s-app: userservice-app
spec:
  template:
    metadata:
      labels:
        k8s-app: userservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: userservice-app
          image: userservice
          ports:
            - containerPort: 3005
              name: grpc
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
          livenessProbe:
            httpGet:
              path: /health
              port: 8085
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
 apiVersion: v1
 kind: Service
 metadata:
   name: userservice
   namespace: default
 spec:
   selector:
     k8s-app: userservice-app
   ports:
     - port: 3005
       targetPort: 3005
       name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: user_mapping
      prefix: /user/
      service: userservice-service:8085
spec:
  ports:
    - port: 8085
      targetPort: 8085
      name: http
  selector:
    k8s-app: userservice-app
  type: ClusterIP
