kubernetes-manifests/leagueservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: leagueservice-app
  namespace: default
  labels:
    k8s-app: leagueservice-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: leagueservice-app
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: leagueservice-app
          image: leagueservice
          ports:
            - containerPort: 3009
              name: grpc
          readinessProbe:
            httpGet:
              path: /health
              port: 8089
          livenessProbe:
            httpGet:
              path: /health
              port: 8089
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
 apiVersion: v1
 kind: Service
 metadata:
   name: leagueservice
   namespace: default
 spec:
   selector:
     k8s-app: leagueservice-app
   ports:
     - port: 3009
       targetPort: 3009
       name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: leagueservice-service
spec:
  ports:
    - port: 8089
      targetPort: 8089
      name: http
  selector:
    k8s-app: leagueservice-app
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
#    kubernetes.io/ingress.allow-http: "false"
#    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: league-ingress
  namespace: default
spec:
  tls:
    - hosts:
      - league.premierpredictor.uk
    - secretName: pp-secret
  rules:
    - host: league.premierpredictor.uk
      http:
        paths:
          - backend:
              serviceName: leagueservice-service
              servicePort: 8089
            path: /
